Fix spacing on recipe header

--- a/app/assets/stylesheets/recipes.scss
+++ b/app/assets/stylesheets/recipes.scss
@@ -1,6 +1,8 @@
 .recipe {
   font-family: sans-serif;
-  width: 800px;
+  padding-left: 20px;
+  padding-right: 20px;
+  width: 760px;
   margin: auto;
   background: white;
 }
@@ -21,7 +23,6 @@
 .recipe .header-text {
   position: absolute;
   top: 20px;
-  left: 20px;
 }
 
 .recipe-title {
